// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsUI renders predictably when showing all items 1`] = `
<ol
  className="items-list"
>
  <ItemUI
    description="one"
    isComplete={false}
    onChange={[Function]}
    onRemove={[Function]}
    uuid="asdfasdf"
  />
  <ItemUI
    description="two"
    isComplete={true}
    onChange={[Function]}
    onRemove={[Function]}
    uuid="qwerqwer"
  />
  <ItemUI
    description="three"
    isComplete={false}
    onChange={[Function]}
    onRemove={[Function]}
    uuid="zxcvzxcv"
  />
</ol>
`;

exports[`ItemsUI renders predictably when showing only incomplete items 1`] = `
<ol
  className="items-list"
>
  <ItemUI
    description="one"
    isComplete={false}
    onChange={[Function]}
    onRemove={[Function]}
    uuid="asdfasdf"
  />
  <ItemUI
    description="three"
    isComplete={false}
    onChange={[Function]}
    onRemove={[Function]}
    uuid="zxcvzxcv"
  />
</ol>
`;
